# -AGHA-

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  agha_pipeline.py  bill.code-workspace  report_generator.py  targets.txt
cpp_core/: high_performance_system.cpp
scripts/: go.mod  grayhunter-nuclei  grayhunter-nuclei.go
src/: nuclei_scanner.cpp
src/output/: hello
